fix navbar on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,3 @@ code, code > * {
 img {
   max-width: 100%;
 }
-
-.navbar-header {
-  padding-right: 60px;
-}
